force-app/main/default/objects/Application_Config_Settings__c/Application_Config_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global config settings such as on/off switch (checkbox) that will decide whether to run the trigger code or not</description>
    <label>Application Configuration Settings</label>
</CustomObject>