force-app/main/default/objects/Application_Config_Settings__c/fields/Bank_Eligible_for_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Bank_Eligible_for_Duplicate_Check__c</fullName>
    <description>Bank Eligible for Duplicate Check</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank Eligible for Duplicate Check</inlineHelpText>
    <label>Bank Eligible for Duplicate Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>