force-app/main/default/objects/Application_Config_Settings__c/fields/Bypass_Judgement_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Judgement_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass_Judgement_Validation</description>
    <inlineHelpText>Bypass_Judgement_Validation</inlineHelpText>
    <label>Bypass Judgement Validation</label>
    <type>Checkbox</type>
</CustomField>