force-app/main/default/objects/Application_Config_Settings__c/fields/Bypass_Refer_To_Legal_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Refer_To_Legal_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Refer To Legal Validation</label>
    <type>Checkbox</type>
</CustomField>