force-app/main/default/objects/Application_Config_Settings__c/fields/Case_duplicate_time__c.field-meta.xml
<CustomField>
    <fullName>Case_duplicate_time__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Number of minutes before which system will mark newly created case with same email subject and attachment name as closed and duplicate</description>
    <inlineHelpText>Number of minutes before which system will mark newly created case with same email subject and attachment name as closed and duplicate</inlineHelpText>
    <label>Case duplicate time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>