force-app/main/default/objects/Application_Config_Settings__c/fields/CCS_Final_Deposit_Slip__c.field-meta.xml
<CustomField>
    <fullName>CCS_Final_Deposit_Slip__c</fullName>
    <description>To Determine Final deposit slip is generated for particular day</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To Determine Final deposit slip is generated for particular day</inlineHelpText>
    <label>CCS Final Deposit Slip</label>
    <type>Date</type>
</CustomField>