force-app/main/default/objects/Application_Config_Settings__c/fields/Display_Duplicate_Accounts_List_View__c.field-meta.xml
<CustomField>
    <fullName>Display_Duplicate_Accounts_List_View__c</fullName>
    <label>Display Duplicate Accounts List View</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>