force-app/main/default/objects/Application_Config_Settings__c/fields/Do_Not_Run_Payment_Validation__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Run_Payment_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not to run validation rule for Payment record update</description>
    <inlineHelpText>Not to run validation rule for Payment record update</inlineHelpText>
    <label>Do Not Run Payment Validation</label>
    <type>Checkbox</type>
</CustomField>