force-app/main/default/objects/Application_Config_Settings__c/fields/Doc_Parser_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Doc_Parser_API_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc Parser API Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>