force-app/main/default/objects/Application_Config_Settings__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Domain Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>