force-app/main/default/objects/Application_Config_Settings__c/fields/Eligible_for_Claim_Type_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Claim_Type_Calculation__c</fullName>
    <description>Eligible for Claim Type Calculation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Eligible for Claim Type Calculation</inlineHelpText>
    <label>Eligible for Claim Type Calculation</label>
    <type>TextArea</type>
</CustomField>