force-app/main/default/objects/Application_Config_Settings__c/fields/Eligible_for_Open_Assignment_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Open_Assignment_Calculation__c</fullName>
    <description>Eligible for Open Assignment Calculation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Eligible for Open Assignment Calculation</inlineHelpText>
    <label>Eligible for Open Assignment Calculation</label>
    <type>TextArea</type>
</CustomField>