force-app/main/default/objects/Application_Config_Settings__c/fields/Eligible_for_Validn_Needed_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Validn_Needed_Calculation__c</fullName>
    <description>Eligible for Validation Needed Calculation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Eligible for Validation Needed Calculation</inlineHelpText>
    <label>Eligible for Validn Needed Calculation</label>
    <type>TextArea</type>
</CustomField>