force-app/main/default/objects/Application_Config_Settings__c/fields/Eligible_for_Voting_Decision__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Voting_Decision__c</fullName>
    <description>stores the client identifier values which are eligible for the voting decision</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>stores the client identifier values which are eligible for the voting decision</inlineHelpText>
    <label>Eligible for Voting Decision</label>
    <length>250</length>
    <type>Text</type>
</CustomField>