force-app/main/default/objects/Application_Config_Settings__c/fields/Final_Deposit_Slip__c.field-meta.xml
<CustomField>
    <fullName>Final_Deposit_Slip__c</fullName>
    <description>Final Deposit Slip for the day</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Deposit Slip</label>
    <type>Date</type>
</CustomField>