force-app/main/default/objects/Application_Config_Settings__c/fields/Ignore_Account_Number_for_DuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Account_Number_for_DuplicateCheck__c</fullName>
    <description>Ignore Account Number for Duplicate Check</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ignore Account Number for Duplicate Check</inlineHelpText>
    <label>Ignore Account Number for DuplicateCheck</label>
    <length>224</length>
    <type>Text</type>
</CustomField>