force-app/main/default/objects/Application_Config_Settings__c/fields/Insolvency_Account_Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Batch_Count__c</fullName>
    <label>Insolvency Account Batch Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>