force-app/main/default/objects/Application_Config_Settings__c/fields/Insolvency_Account_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Field_ID__c</fullName>
    <defaultValue>&apos;CF00N17000001HI4f&apos;</defaultValue>
    <description>Holds Insolvency field ID on Insolvency Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds Insolvency field ID on Insolvency Account</inlineHelpText>
    <label>Insolvency Account Field ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>