force-app/main/default/objects/Application_Config_Settings__c/fields/Insolvency_Account_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Object_ID__c</fullName>
    <defaultValue>&apos;01I170000001MGO&apos;</defaultValue>
    <description>Holds Insolvency Account Object Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds Insolvency Account Object Id</inlineHelpText>
    <label>Insolvency Account Object ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>