force-app/main/default/objects/Application_Config_Settings__c/fields/Insolvency_Case_Field_ID__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Case_Field_ID__c</fullName>
    <defaultValue>&apos;CF00N17000001HI4F&apos;</defaultValue>
    <description>Insolvency Case Field ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insolvency Case Field ID</inlineHelpText>
    <label>Insolvency Case Field ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>