force-app/main/default/objects/Application_Config_Settings__c/fields/Interest_Rate_Less_Than_35__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Less_Than_35__c</fullName>
    <label>Interest Rate Less Than 35</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>