force-app/main/default/objects/Application_Config_Settings__c/fields/Interest_Rate_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Valid_Date__c</fullName>
    <description>Interest Rate Valid Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interest Rate Valid Date</label>
    <type>Date</type>
</CustomField>