force-app/main/default/objects/Application_Config_Settings__c/fields/Maximum_Email_Attachments_Size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Email_Attachments_Size__c</fullName>
    <description>Maximum Email Attachments Size</description>
    <inlineHelpText>Maximum Email Attachments Size</inlineHelpText>
    <label>Maximum Email Attachments Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>