force-app/main/default/objects/Application_Config_Settings__c/fields/Maximum_Email_Attachments_Size_Text__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Email_Attachments_Size_Text__c</fullName>
    <description>Maximum Email Attachments Size Text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Maximum Email Attachments Size Text</inlineHelpText>
    <label>Maximum Email Attachments Size Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>