force-app/main/default/objects/Application_Config_Settings__c/fields/MM_Insolvency_Account_Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>MM_Insolvency_Account_Batch_Count__c</fullName>
    <label>MM Insolvency Account Batch Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>