force-app/main/default/objects/Application_Config_Settings__c/fields/Product_Payment_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Payment_Record_Type__c</fullName>
    <description>Distressed Product payment record type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Distressed Product payment record type</inlineHelpText>
    <label>Product Payment Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>