force-app/main/default/objects/Application_Config_Settings__c/fields/Profile_Eligible_for_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Profile_Eligible_for_Duplicate_Check__c</fullName>
    <description>Profile Eligible for Duplicate Check</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Profile Eligible for Duplicate Check</inlineHelpText>
    <label>Profile Eligible for Duplicate Check</label>
    <length>100</length>
    <type>Text</type>
</CustomField>