force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Account_Judgment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Account_Judgment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Account Judgment Trigger</description>
    <inlineHelpText>Run Account Judgment Trigger</inlineHelpText>
    <label>Run Account Judgment Trigger</label>
    <type>Checkbox</type>
</CustomField>