force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Attachment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Attachment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Attachment Trigger</description>
    <inlineHelpText>Run Attachment Trigger</inlineHelpText>
    <label>Run Attachment Trigger</label>
    <type>Checkbox</type>
</CustomField>