force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Case_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checks whether to run Case Trigger or not</description>
    <inlineHelpText>Checks whether to run Case Trigger or not</inlineHelpText>
    <label>Run Case Trigger</label>
    <type>Checkbox</type>
</CustomField>