force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Customer_Update_API_for_Portal__c.field-meta.xml
<CustomField>
    <fullName>Run_Customer_Update_API_for_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to execute the API call to portal from Account trigger for Customer update to portal</description>
    <inlineHelpText>Checkbox to execute the API call to portal from Account trigger for Customer update to portal</inlineHelpText>
    <label>Run Customer Update API for Portal</label>
    <type>Checkbox</type>
</CustomField>