force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Deposit_Slip_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Deposit_Slip_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Deposit Slip Trigger when checkbox is checked</description>
    <inlineHelpText>Run Deposit Slip Trigger when checkbox is checked</inlineHelpText>
    <label>Run Deposit Slip Trigger</label>
    <type>Checkbox</type>
</CustomField>