force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Distressed_Notes_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Distressed_Notes_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Distressed Notes Trigger</description>
    <inlineHelpText>Run Distressed Notes Trigger</inlineHelpText>
    <label>Run Distressed Notes Trigger</label>
    <type>Checkbox</type>
</CustomField>