force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Document_Storage_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Document_Storage_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Document Storage Trigger</description>
    <inlineHelpText>Run Document Storage Trigger</inlineHelpText>
    <label>Run Document Storage Trigger</label>
    <type>Checkbox</type>
</CustomField>