force-app/main/default/objects/Application_Config_Settings__c/fields/Run_EmailMessage_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_EmailMessage_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run EmailMessage Trigger</label>
    <type>Checkbox</type>
</CustomField>