force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Insolvency_Account_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Run_Insolvency_Account_Duplicate_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Run Insolvency Account Duplicate Check</description>
    <inlineHelpText>Run Insolvency Account Duplicate Check</inlineHelpText>
    <label>Run Insolvency Account Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>