force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Insolvency_Payment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Insolvency_Payment_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checks whether to run Insolvency Payment Trigger or not</description>
    <inlineHelpText>Checks whether to run Insolvency Payment Trigger or not</inlineHelpText>
    <label>Run Insolvency Payment Trigger</label>
    <type>Checkbox</type>
</CustomField>