force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Insolvency_Status_Validations__c.field-meta.xml
<CustomField>
    <fullName>Run_Insolvency_Status_Validations__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checks whether to run Insolvency Status Validation Rules or not</description>
    <inlineHelpText>Checks whether to run Insolvency Status Validation Rules or not</inlineHelpText>
    <label>Run Insolvency Status Validations</label>
    <type>Checkbox</type>
</CustomField>