force-app/main/default/objects/Application_Config_Settings__c/fields/Run_JudgmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Run_JudgmentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run_JudgmentTrigger</description>
    <inlineHelpText>Run_JudgmentTrigger</inlineHelpText>
    <label>Run_JudgmentTrigger</label>
    <type>Checkbox</type>
</CustomField>