force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Merchant_Account_Payment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Merchant_Account_Payment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Merchant Account Payment Trigger</description>
    <inlineHelpText>Run Merchant Account Payment Trigger</inlineHelpText>
    <label>Run Merchant Account Payment Trigger</label>
    <type>Checkbox</type>
</CustomField>