force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Product_Coll_Sub_Status_Validation__c.field-meta.xml
<CustomField>
    <fullName>Run_Product_Coll_Sub_Status_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>not to allow status change directly to Legal status. Legal status will only be changed automatically after Judgment record is added</description>
    <label>Run Product Coll Sub Status Validation</label>
    <type>Checkbox</type>
</CustomField>