force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Record_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Run_Record_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Record Ownership</label>
    <type>Checkbox</type>
</CustomField>