force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Remittance_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Remittance_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Run Remittance Trigger</description>
    <inlineHelpText>Run Remittance Trigger</inlineHelpText>
    <label>Run Remittance Trigger</label>
    <type>Checkbox</type>
</CustomField>