force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Remittance_Validation__c.field-meta.xml
<CustomField>
    <fullName>Run_Remittance_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To run remittance validation rule</description>
    <inlineHelpText>To run remittance validation rule</inlineHelpText>
    <label>Run Remittance Validation</label>
    <type>Checkbox</type>
</CustomField>