force-app/main/default/objects/Application_Config_Settings__c/fields/Run_Work_Assignment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Work_Assignment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Run Work Assignment Trigger</description>
    <inlineHelpText>Run Work Assignment Trigger</inlineHelpText>
    <label>Run Work Assignment Trigger</label>
    <type>Checkbox</type>
</CustomField>