force-app/main/default/objects/Application_Config_Settings__c/fields/Target_URL_for_Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Target_URL_for_Insolvency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target URL for Insolvency</label>
    <length>250</length>
    <type>Text</type>
</CustomField>