force-app/main/default/objects/Application_Config_Settings__c/fields/Use_new_POC_templates__c.field-meta.xml
<CustomField>
    <fullName>Use_new_POC_templates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will generate POC documents with new templates if checked</description>
    <inlineHelpText>Will generate POC documents with new templates if checked</inlineHelpText>
    <label>Use new POC templates</label>
    <type>Checkbox</type>
</CustomField>